--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.monsalachai.calculatip.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_clear_all"
+        android:orderInCategory="100"
+        android:title="Clear All"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_settings_menu"
         android:orderInCategory="100"
         android:title="@string/action_settings"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_export"
+        android:orderInCategory="100"
+        android:title="Export"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_about_menu"
+        android:orderInCategory="100"
+        android:title="About"
         app:showAsAction="never" />
 </menu>
