--- a/app/src/main/res/layout/view_invested_party.xml
+++ b/app/src/main/res/layout/view_invested_party.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.monsalachai.calculatip.ui.InvestedPartyView"
+    tools:parentTag="com.monsalachai.calculatip.ui.InvestedPartyView"
     >
 
     <android.support.constraint.Guideline
@@ -84,13 +85,25 @@
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/radio_group" />
 
+    <Switch
+        android:id="@+id/switch_use_rounded"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_weight="1"
+        android:text="Use Rounded Tip"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/percent_other_entry" />
+
+
     <!-- Report views here (things like tip, total, rounded tip, rounded percentage. -->
     <LinearLayout
         android:id="@+id/tip_report_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/percent_other_entry">
+        app:layout_constraintTop_toBottomOf="@id/switch_use_rounded">
 
         <TextView
             android:id="@+id/label"
